RESOLVED FIXED303817
SpeculationRules - some of the invalid-tag tests have failing expectations
https://bugs.webkit.org/show_bug.cgi?id=303817
Summary SpeculationRules - some of the invalid-tag tests have failing expectations
Yoav Weiss
Reported 2025-12-09 01:44:35 PST
Some of the invalid-tag tests have failing expectations. We should fix them!
Attachments
Yoav Weiss
Comment 1 2025-12-09 01:47:02 PST
agam maulana
Comment 2 2025-12-09 03:24:56 PST
(In reply to Yoav Weiss from comment #0) > Beberapa tes tag yang tidak valid memiliki harapan yang gagal. Kita harus > memperbaikinya!
EWS
Comment 3 2025-12-10 14:28:05 PST
Committed 304262@main (0ffe75385f5f): <https://commits.webkit.org/304262@main> Reviewed commits have been landed. Closing PR #55093 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-12-10 14:29:12 PST
Note You need to log in before you can comment on or make changes to this bug.