SpeculationRules - Fix failing invalid tags tests https://bugs.webkit.org/show_bug.cgi?id=303817

Reviewed by Alex Christensen.

Some of the invalid tag tests are rightfully failing, due to unaligned behavior with the spec in case of non-string invalid tags.
This PR fixes that by aligning the implementation with the spec.

No new tests, but progression on existing ones.

* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/invalid-tags.https_tag-level=rule&type=prefetch-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/speculation-tags/invalid-tags.https_tag-level=ruleset&type=prefetch-expected.txt: Progression.
* Source/WebCore/loader/SpeculationRules.cpp:
(WebCore::parseSingleRule): Return false for non-string tags.
(WebCore::SpeculationRules::parseSpeculationRules): Return false for non-string tags.

Canonical link: https://commits.webkit.org/304262@main